# IUST_Quadruped_software

./: CMakeLists.txt  README.md  TODO.txt
common/: CMakeLists.txt
common/FootstepPlanner/: GraphSearch.h
common/include/: cppTypes.h
common/test/: test_ControlParameters.cpp  test_dynamics.cpp
config/: c3-jpos-user-parameters.yaml  cheetah-3-defaults.yaml  default-simulator-parameters.yaml  default-terrain.yaml  default-user-parameters-file.yaml  initial_jpos_ctrl.yaml  iust-robot-parameters.yaml  iust-user-parameters-full.yaml  iust-user-parameters.yaml  jpos-user-parameters.yaml  mini-cheetah-defaults.yaml  new-user-parameters.yaml  no-parameters.yaml
debug_tools/: leg_controller_data.txt  leg_controller_data_kp500_kd5_force5.txt  leg_controller_plot.py  positive_matrix_check.py
debug_tools/logs/: leg_controller_data-Dec14_17:12.txt  leg_controller_data.txt  leg_controller_data_2.txt  leg_controller_data_3.txt  leg_controller_data_Dec14-15:36.txt  leg_controller_data_kp500_kd50.txt  leg_controller_data_kp550.txt  leg_controller_data_kp550_kd4.txt  leg_controller_data_kp550_kd4_5.txt
lcm-types/: actuator_command_t.lcm  actuator_response_t.lcm  can_command_t.lcm  can_data_t.lcm
lcm-types/cpp/: actuator_command_t.hpp  actuator_response_t.hpp  can_command_t.hpp  can_data_t.hpp
lcm-types/lcmtypes/: actuator_command_t.java  actuator_response_t.java  can_command_t.java  can_data_t.java
lcm-types/python/: actuator_command_t.py  actuator_response_t.py  can_command_t.py  can_data_t.py  read_log.py
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h  main_helper.h
robot/include/rt/: Actuator.h  SocketCAN.h  rt_can.h  rt_joystick_interface.h  rt_rc_interface.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp  a.out  main_helper.cpp  publish_controller  publish_controller.cpp  read_log.py
robot/src/rt/: Actuator.cpp  SocketCAN.cpp  rt_can.cpp  rt_joystick_interface.cpp  rt_rc_interface.cpp  rt_sbus.cpp  rt_spi.cpp  rt_vectornav.cpp
scripts/: run_iust.sh  run_mc_2.sh  send_to_iust_robot.sh
sim/: CMakeLists.txt
sim/include/: Colors.h  DrawList.h  Graphics3D.h  Simulation.h
sim/src/: DrawList.cpp  (+6 more)
user/: CMakeLists.txt
user/IUST_Controller/: CMakeLists.txt  IUST_Controller.cpp  IUST_Controller.hpp  IustUserParameters.h  main.cpp
user/New_Joint_Controller/: CMakeLists.txt  NewUserParameters.h  New_Controller.cpp  New_Controller.hpp  main.cpp
user/RaspberryPi_Controller/: CMakeLists.txt  Rasp_Controller.cpp  Rasp_Controller.hpp
(+45 files in other folders)
